--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jamixmealhooker",
-  "version": "1.0.0",
+  "version": "1.5.0",
   "description": "Fetches meal data from Jamix and sends the daily meal to a webhook.",
   "main": "index.js",
   "scripts": {
@@ -11,8 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.24.0",
-    "cheerio": "^1.0.0-rc.10",
-    "dotenv": "^16.0.0",
-    "node-cron": "^3.0.0"
+    "dependencies": "^0.0.1",
+    "dotenv": "^16.0.0"
   }
 }
